--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: J. & A. Bonnici
-Description: Theme designed specifically for J. & A. Bonnici.
+Theme Name: ADZ
+Description: Theme designed specifically for ADZ following European Green Party Branding.
 Author: Daniel Desira
 Author URI: http://dannydes.github.io
 Version: 0.4
