--- a/style.css
+++ b/style.css
@@ -18,6 +18,16 @@ body > .container { width: 75%; }
 .navbar-brand > img { display: inline; }
 
 /**
+ * Image alignment as per https://codex.wordpress.org/Wrapping_Text_Around_Images
+ */
+img.alignright { float: right; margin: 0 0 1em 1em; }
+img.alignleft { float: left; margin: 0 1em 1em 0; }
+img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
+.alignright { float: right; }
+.alignleft { float: left; }
+.aligncenter { display: block; margin-left: auto; margin-right: auto; }
+
+/**
  * Sidebar placement and display properties.
  */
 .sidebar {
