more alignment goodness

--- a/style.css
+++ b/style.css
@@ -20,12 +20,13 @@ body > .container { width: 75%; }
 /**
  * Image alignment as per https://codex.wordpress.org/Wrapping_Text_Around_Images
  */
-img.alignright { float: right; margin: 0 0 1em 1em; }
-img.alignleft { float: left; margin: 0 1em 1em 0; }
+img.alignright { float: right; margin: 0 0 1em 1em; padding: 4px; margin: 0 0 2px 7px; display: inline; }
+img.alignleft { float: left; margin: 0 1em 1em 0; padding: 4px; margin: 0 7px 2px 0; display: inline; }
 img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 .alignright { float: right; }
 .alignleft { float: left; }
 .aligncenter { display: block; margin-left: auto; margin-right: auto; }
+p img { padding: 0; max-width: 100%; }
 
 /**
  * Sidebar placement and display properties.
