--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 .aligncenter { display: block; margin-left: auto; margin-right: auto; }
 p img { padding: 0; max-width: 100%; }
 
+.footer > .container {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 /**
  * Sidebar placement and display properties.
  */
