sidebar staying activated on button click

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -3,7 +3,7 @@
 	top: 50px;
 	right: 0px;
 	z-index: 9999;
-	width: 40px;
+	width: 125px;
 	background-color: @navbar-default-bg;
 	color: @navbar-default-color;
 	border-bottom-left-radius: 10px;
@@ -12,12 +12,14 @@
 	.widget-area { display: none; }
 }
 
-.sidebar:hover {
+.sidebar:hover, .sidebar-open {
 	width: 200px;
 	height: 100%;
 	
 	.widget-area { display: inline; }
-	.sidebar-info {	display: none; }
 }
 
-.sidebar-info { transform: rotate(270deg); }
+.sidebar-toggle {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
