--- a/less/footer.less
+++ b/less/footer.less
@@ -10,6 +10,10 @@
 		a {
 			color: @navbar-default-color;
 		}
+		
+		span:not(:last-of-type):after {
+			content: " | ";
+		}
 	}
 	
 	.container {
