"Toggle sidebar" -> "Lock sidebar"

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -15,14 +15,14 @@
 	}
 }
 
-.sidebar:hover, .sidebar-open {
+.sidebar:hover, .sidebar-locked {
 	width: 200px;
 	height: 100%;
 	
 	.widget-area { display: block; }
 }
 
-.sidebar-toggle {
+.sidebar-lock {
 	display: block;
 	margin: 10px;
 }
