links in sidebar are now white

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -9,6 +9,8 @@
 	border-bottom-left-radius: 10px;
 	transition: all 100ms;
 	
+	a { color: @navbar-default-color; }
+	
 	.widget-area {
 		display: none;
 		margin-left: 10px;
