--- a/less/variables.less
+++ b/less/variables.less
@@ -364,15 +364,15 @@
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color:             #fff;
+@navbar-default-color:             @navbar-default-link-color;
 @navbar-default-bg:                #7ac143;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
 
 // Navbar links
-@navbar-default-link-color:                @navbar-default-color;
-@navbar-default-link-hover-color:          darken(@navbar-default-color, 6.5%);
+@navbar-default-link-color:                darken(@navbar-default-link-active-color, 6.5% * 2);
+@navbar-default-link-hover-color:          darken(@navbar-default-link-active-color, 6.5%);
 @navbar-default-link-hover-bg:             transparent;
-@navbar-default-link-active-color:         #555;
+@navbar-default-link-active-color:         #fff;
 @navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
 @navbar-default-link-disabled-color:       #ccc;
 @navbar-default-link-disabled-bg:          transparent;
