Removed bullet next to "Blogroll"

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -9,7 +9,13 @@
 	border-bottom-left-radius: 10px;
 	transition: all 100ms;
 	
-	a { color: @navbar-default-color; }
+	a {
+		color: @navbar-default-color;
+	}
+	
+	.linkcat {
+		list-style: none;
+	}
 	
 	.widget-area {
 		display: none;
@@ -21,7 +27,9 @@
 	width: 200px;
 	height: 100%;
 	
-	.widget-area { display: block; }
+	.widget-area {
+		display: block;
+	}
 }
 
 .sidebar-lock {
