--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -3,10 +3,10 @@
 	top: 50px;
 	right: 0px;
 	z-index: 9999;
-	width: 135px;
+	width: 0;
+	height: 100%;
 	background-color: @navbar-default-bg;
 	color: @navbar-default-color;
-	border-bottom-left-radius: 10px;
 	transition: all 100ms;
 	
 	a {
@@ -23,20 +23,10 @@
 	}
 }
 
-.sidebar:hover, .sidebar-locked {
-	width: 200px;
-	height: 100%;
+.sidebar.open {
+	width: 250px;
 	
 	.widget-area {
 		display: block;
 	}
-}
-
-.sidebar-lock {
-	display: block;
-	margin: 10px;
-}
-
-.sidebar-lock.active:before {
-	content: 'Un';
 }
