--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -13,10 +13,6 @@
 		color: @navbar-default-color;
 	}
 	
-	.linkcat {
-		list-style: none;
-	}
-	
 	.widget-area {
 		display: none;
 		margin-left: 10px;
@@ -29,4 +25,9 @@
 	.widget-area {
 		display: block;
 	}
+}
+
+// Blogroll
+.linkcat {
+	list-style: none;
 }
