links in footer and sidebar now react to :hover

--- a/less/footer.less
+++ b/less/footer.less
@@ -11,6 +11,10 @@
 			color: @navbar-default-color;
 		}
 		
+		a:hover {
+			color: @navbar-default-link-hover-color;
+		}
+		
 		span:not(:last-of-type):after {
 			content: " | ";
 		}
