--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -13,6 +13,10 @@
 		color: @navbar-default-color;
 	}
 	
+	a:hover {
+		color: @navbar-default-link-hover-color;
+	}
+	
 	.widget-area {
 		display: none;
 		margin-left: 10px;
