more space between widgets in sidebar

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -17,6 +17,10 @@
 		color: @navbar-default-link-hover-color;
 	}
 	
+	h4 {
+		margin-top: 15px;
+	}
+	
 	.widget-area {
 		display: none;
 		margin-left: 10px;
