--- a/less/pagination.less
+++ b/less/pagination.less
@@ -7,7 +7,7 @@
   margin: @line-height-computed 0;
   border-radius: @border-radius-base;
 
-  > li {
+  li {
     display: inline; // Remove list-style and block-level defaults
     > a,
     > span {
