--- a/less/footer.less
+++ b/less/footer.less
@@ -21,8 +21,8 @@
 	}
 	
 	.container {
-		padding-top: 10px;
-		padding-bottom: 10px;
+		padding-top: 0.625em;
+		padding-bottom: 0.625em;
 		margin-left: auto;
 		margin-right: auto;
 	}
