--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -1,7 +1,7 @@
 .sidebar {
 	position: fixed;
-	top: 50px;
-	right: 0px;
+	top: 3.125em;
+	right: 0;
 	z-index: 9999;
 	width: 0;
 	height: 100%;
@@ -18,19 +18,19 @@
 	}
 	
 	h4 {
-		margin-top: 15px;
+		margin-top: 0.938em;
 	}
 	
-	.widget-area {
+	>.widget-area {
 		display: none;
-		margin-left: 10px;
+		margin-left: 0.625em;
 	}
 }
 
 .sidebar.open {
-	width: 250px;
+	width: 15.625em;
 	
-	.widget-area {
+	>.widget-area {
 		display: block;
 	}
 }
