--- a/less/specific-mods.less
+++ b/less/specific-mods.less
@@ -1,14 +1,9 @@
-/**
- * General styling.
- */
-
+// General styling.
 body { padding-top: 50px; }
-.sad-face { font-size: 150px; }
+.sad-face { font-size: 9.375em; }
 .navbar, .sidebar { opacity: 0.95; }
 
-/**
- * Image alignment as per https://codex.wordpress.org/Wrapping_Text_Around_Images
- */
+// Image alignment as per https://codex.wordpress.org/Wrapping_Text_Around_Images
 img.alignright { float: right; margin: 0 0 1em 1em; padding: 4px; margin: 0 0 2px 7px; display: inline; }
 img.alignleft { float: left; margin: 0 1em 1em 0; padding: 4px; margin: 0 7px 2px 0; display: inline; }
 img.aligncenter { display: block; margin-left: auto; margin-right: auto; }
