.less extension applied to my imports

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -56,7 +56,7 @@
 @import "responsive-utilities.less";
 
 // Added custom components
-@import "sidebar";
-@import "footer";
-@import "specific-mods";
-@import "call-to-action-block";
+@import "sidebar.less";
+@import "footer.less";
+@import "specific-mods.less";
+@import "call-to-action-block.less";
