fixes to layout

--- a/less/call-to-action-block.less
+++ b/less/call-to-action-block.less
@@ -2,8 +2,9 @@
   background-color: @navbar-default-bg;
 
 	>.container {
-		padding-top: 10px;
-		padding-bottom: 10px;
+		padding-top: 0.625em;
+		padding-bottom: 0.625em;
 		text-align: center;
+		color: #fff;
 	}
 }
