few changes to settings, implemented custom logo support (#6) and (#10)

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: ADZ
+Theme Name: Ecologie
 Description: Theme designed specifically for ADZ following European Green Party Branding.
 Author: Daniel Desira
 Author URI: http://dannydes.github.io
-Version: 0.7.4
+Version: 0.8
 */
 
 /*!
