changelog and theme description update

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Ecologie
-Description: Theme designed specifically for ADZ following European Green Party Branding.
+Description: Theme designed to suit European Green Parties and their related organisations supporting peace, the environment, labour and civil rights.
 Author: Daniel Desira
 Author URI: http://dannydes.github.io
 Version: 0.8
