Investigate image scaling in blog posts #22

--- a/less/blog.less
+++ b/less/blog.less
@@ -16,3 +16,44 @@ p img { padding: 0; max-width: 100%; }
   color: #fff;
 	border-radius: 0.5em;
 }
+
+// Responsive max height for images
+img {
+  max-height: 18.750em;
+}
+
+@media (min-width: 20.063em) and (max-width: 22.5em) {
+  img {
+   max-height: 21.875em;
+  }
+}
+
+@media (min-width: 22.563em) and (max-width: 48.125em) {
+  img {
+    max-height: 28.125em;
+  }
+}
+
+@media (min-width: 48.188em) and (max-width: 50em) {
+  img {
+    max-height: 31.250em;
+  }
+}
+
+@media (min-width: 50.063em) and (max-width: 62.5em) {
+  img {
+    max-height: 37.5em;
+  }
+}
+
+@media (min-width: 62.563em) and (max-width: 81.25em) {
+  img {
+    max-height: 50em;
+  }
+}
+
+@media (min-width: 81.313em) {
+  img {
+    max-height: 62.5em;
+  }
+}
