Review custom LESS files' nesting #27

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -21,21 +21,16 @@
 		margin-top: 0.938em;
 	}
 	
-	>.widget-area {
+	> .widget-area {
 		display: none;
 		margin-left: 0.625em;
 	}
-}
-
-.sidebar.open {
-	width: 15.625em;
 	
-	>.widget-area {
-		display: block;
+	&.open {
+		width: 15.625em;
+	
+		> .widget-area {
+			display: block;
+		}
 	}
-}
-
-// Blogroll
-.linkcat {
-	list-style: none;
 }
