--- a/less/header.less
+++ b/less/header.less
@@ -1,5 +1,24 @@
+html, body {
+  height: 100%;
+}
+
 .header {
-	> img {
-		width: 100%;
+  height: 100%;
+  height: calc(100% - 1em);
+}
+
+.header-text {
+  padding-top: 5em;
+  padding-right: 6em;
+}
+
+.header-text {
+	> h1, h3, p {
+		color: #fff;
+		text-align: right;
+	}
+	
+	> .btn {
+		float: right;
 	}
 }
