--- a/less/comment.less
+++ b/less/comment.less
@@ -1,5 +1,8 @@
 .comment {
-	>.depth-2 ,>.depth-3, >.depth-4, >.depth-5 {
+	>.depth-2,
+			>.depth-3,
+			>.depth-4,
+			>.depth-5 {
 		margin-left: 5em;
 	}
 }
