improved LESS standards

--- a/less/404.less
+++ b/less/404.less
@@ -1,10 +1,10 @@
 ._404 {
-	padding-top: 15em;
-  padding-bottom: 15em;
+	padding-top: @404-vertical-spacing;
+  padding-bottom: @404-vertical-spacing;
 	text-align: center;
 	
 	*, a {
-		color: #000;
+		color: @black;
 	}
 	
 	a {
