--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -61,10 +61,9 @@
 @import "specific-mods.less";
 @import "call-to-action-block.less";
 @import "blog.less";
-@import "blogroll.less";
 @import "social-buttons.less";
 @import "header.less";
 @import "404.less";
 @import "widgets.less";
-@import "comment.less";
+@import "comments.less";
 @import "loading.less";
