--- a/less/call-to-action-block.less
+++ b/less/call-to-action-block.less
@@ -2,9 +2,9 @@
   background-color: @navbar-default-bg;
 
 	> .container {
-		padding-top: 1.5em;
-		padding-bottom: 1.5em;
+		padding-top: @cta-block-vertical-spacing;
+		padding-bottom: @cta-block-vertical-spacing;
 		text-align: center;
-		color: #fff;
+		color: @navbar-default-link-active-color;
 	}
 }
