--- a/less/social-buttons.less
+++ b/less/social-buttons.less
@@ -5,13 +5,13 @@
 .social-btn {
   float: left;
   background: darken( @navbar-default-bg, 10% );
-  color: #fff;
-  width: 2em;
-  height: 2em;
+  color: @navbar-default-link-active-color;
+  width: @social-button-size;
+  height: @social-button-size;
   text-align: center;
-  border-radius: 2em;
-	margin-right: 1em;
-	margin-bottom: 1em;
+  border-radius: @social-button-size;
+	margin-right: @social-button-spacing;
+	margin-bottom: @social-button-spacing;
 	
 	i {
 		margin: 0.5em;
