--- a/less/variables.less
+++ b/less/variables.less
@@ -867,3 +867,17 @@
 @dl-horizontal-breakpoint:    @grid-float-breakpoint;
 //** Horizontal line color.
 @hr-border:                   @gray-lighter;
+
+
+//== Custom
+//
+//##
+
+@black:                       #000;
+@404-vertical-spacing:        15em;
+@social-button-size:          2em;
+@social-button-spacing:       1em;
+@cta-block-vertical-spacing:  1.5em;
+@footer-vertical-spacing:     0.625em;
+@loading-sonar-max-size:      1em;
+@loading-sonar-min-size:      0.1em;
