--- a/less/footer.less
+++ b/less/footer.less
@@ -12,7 +12,7 @@
 		}
 		
 		a:hover {
-			color: @navbar-default-link-hover-color;
+			color: @navbar-default-link-active-color;
 		}
 		
 		span:not(:last-of-type):after {
@@ -21,8 +21,8 @@
 	}
 	
 	.container {
-		padding-top: 0.625em;
-		padding-bottom: 0.625em;
+		padding-top: @footer-vertical-spacing;
+		padding-bottom: @footer-vertical-spacing;
 		margin-left: auto;
 		margin-right: auto;
 	}
