--- a/less/header.less
+++ b/less/header.less
@@ -14,7 +14,7 @@ html, body {
 
 .header-text {
 	> h1, h3, p {
-		color: #fff;
+		color: @navbar-default-link-active-color;
 		text-align: right;
 	}
 	
