--- a/less/variables.less
+++ b/less/variables.less
@@ -760,7 +760,7 @@
 //
 //##
 
-@well-bg:                     #f5f5f5;
+@well-bg:                     #a6d785;
 @well-border:                 darken(@well-bg, 7%);
 
 
