Footer-top should have greenish background colour #64

--- a/less/variables.less
+++ b/less/variables.less
@@ -879,3 +879,4 @@
 @social-button-spacing:       1em;
 @cta-block-vertical-spacing:  1.5em;
 @footer-vertical-spacing:     0.625em;
+@footer-top-bg:               #a6d785;
