--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: Ecologie
-Description: Theme designed to suit European Green Parties and their related organisations supporting peace, the environment, labour and civil rights.
+Description: Theme inspired by Green politics - the political ideology built around peace, the environment, labour and civil rights.
 Author: Daniel Desira
 Author URI: http://dannydes.github.io
-Version: 0.8.4
+Version: 0.9
 */
 
 /*!
