--- a/less/variables.less
+++ b/less/variables.less
@@ -146,7 +146,7 @@
 
 @btn-default-color:              #333;
 @btn-default-bg:                 #fff;
-@btn-default-border:             #ccc;
+@btn-default-border:             #7ac143;
 
 @btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
