.btn-default has a new green border and background #68

--- a/less/variables.less
+++ b/less/variables.less
@@ -145,7 +145,7 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              #333;
-@btn-default-bg:                 #fff;
+@btn-default-bg:                 #a6d785;
 @btn-default-border:             #7ac143;
 
 @btn-primary-color:              #fff;
