--- a/less/back-to-top.less
+++ b/less/back-to-top.less
@@ -7,7 +7,7 @@
 	color: #fff;
 	background-color: @navbar-default-bg;
 	opacity: 0.7;
-	text-align: center;
+	padding: 0.55em;
 	border-radius: 0.5em;
 	display: none;
 	transition: width 0.5s ease-in,
