--- a/less/call-to-action-block.less
+++ b/less/call-to-action-block.less
@@ -1,9 +1,10 @@
 .call-to-action-block {
-  background-color: @navbar-default-bg;
+	background-color: @navbar-default-bg;
 
 	> .container {
 		padding-top: @cta-block-vertical-spacing;
 		padding-bottom: @cta-block-vertical-spacing;
 		color: @navbar-default-link-active-color;
+		font-size: 2.5em;
 	}
 }
