--- a/less/navbar.less
+++ b/less/navbar.less
@@ -174,6 +174,9 @@
 
   > img {
     display: inline;
+	position: relative;
+	bottom: 50%;
+	margin-bottom: 50%;
   }
 
   @media (min-width: @grid-float-breakpoint) {
