Upgraded to Font Awesome 5 #62

--- a/less/social-buttons.less
+++ b/less/social-buttons.less
@@ -1,14 +1,14 @@
 .social-btn {
-  background: darken( @navbar-default-bg, 10% );
-  color: @navbar-default-link-active-color;
-  width: @social-button-size;
-  height: @social-button-size;
-  text-align: center;
-  border-radius: @social-button-size;
+	background: darken( @navbar-default-bg, 10% );
+	color: @navbar-default-link-active-color;
+	width: @social-button-size;
+	height: @social-button-size;
+	text-align: center;
+	border-radius: @social-button-size;
 	margin-right: @social-button-spacing;
 	margin-bottom: @social-button-spacing;
 	
-	i {
+	> svg {
 		margin: 0.5em;
 	}
 }
