--- a/less/widgets.less
+++ b/less/widgets.less
@@ -1,3 +1,8 @@
 .widgettitle {
-  font-size: 1.5em;
+	font-size: 1.5em;
+}
+
+.contact-widget-address {
+	display: inline-block;
+	margin-left: 1em;
 }
